--- a/uniLab3.html
+++ b/uniLab3.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="uniLab3.css">
 </head>
 <body>
-<h1>waiting</h1>
+<h1>waitinggggg</h1>
 
 
 <script src="uniLab3.js"></script>
